Make it Java 1.4 compatible.